maven-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: maven-app
  labels:
    app: maven-app
    app.kubernetes.io/component: maven-app
    app.kubernetes.io/instance: maven-app
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: maven-app
  template:
    metadata:
      labels:
        deployment: maven-app
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: maven-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/dev/maven-app
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
