maven-app/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: maven-app
  namespace: dev
  labels:
    app: maven-app
    app.kubernetes.io/component: maven-app
    app.kubernetes.io/instance: maven-app
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    deployment: maven-app
  clusterIP: 172.30.217.239
  clusterIPs:
    - 172.30.217.239
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
