maven-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: maven-app
  namespace: dev
  labels:
    app: maven-app
    app.kubernetes.io/component: maven-app
    app.kubernetes.io/instance: maven-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: maven-app-dev.apps.cluster-d9af.d9af.sandbox575.opentlc.com
  to:
    kind: Service
    name: maven-app
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
